# veridra

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: assessment-rules.md  profile-selection.md  roadmap.md
docs/architecture/: identity-tenancy-foundation.md  workspace-entitlement-boundary.md  workspace-membership-boundary.md
docs/releases/: 1.5.0.md  1.6.0.md  1.7.0.md  1.8.0.md  1.9.0.md  2.0.0.md  2.1.0.md  2.10.0.md  2.2.0.md  2.3.0.md  2.4.0.md  2.5.0.md  2.6.0.md  2.7.0.md  2.8.0.md  2.9.0.md  3.0.0.md  3.1.0.md  3.2.0-checklist.md  3.2.0-scope.md  3.2.0.md  3.3.0.md  README.md
src/veridra/: __init__.py  accessibility.py  app.py  application_identity.py  audit.py  collector.py  commercial_ops.py  commercial_web.py  core.py  crawl.py  crawl_profile_web.py  crawl_profiles.py  dns_posture.py  email_delivery.py  exports.py  history.py  history_web.py  identity_middleware.py  identity_tenancy.py  lead_delivery.py  lead_store.py  lead_web.py  local_readiness.py  member_assignments_web.py  member_references.py  monitoring_ops.py  monitoring_schedule.py  monitoring_web.py  page_quality.py  passive_security.py  pdf_reports.py  pdf_web.py  profile_store.py  profile_web.py  project_migration.py  project_migration_cli.py  project_monitor.py  project_store.py  project_web.py  public_web.py  (+21 more)
tests/: test_accessibility.py  test_app.py  test_audit.py  test_collector.py  test_commercial_ops.py  test_core.py  test_crawl.py  test_crawl_profile_web.py  test_crawl_profiles.py  test_dns_posture.py  test_email_delivery.py  test_exports.py  test_filters.py  test_history.py  test_history_web.py  test_identity_middleware.py  test_identity_tenancy.py  test_lead_delivery.py  test_lead_store.py  test_lead_web.py  test_local_readiness.py  test_member_assignments_web.py  test_member_references.py  test_monitoring_ops.py  test_monitoring_schedule.py  test_monitoring_web.py  test_page_quality.py  test_passive_security.py  test_pdf_reports.py  test_profile_selector.py  test_profile_store.py  test_profile_web.py  test_project_migration.py  test_project_migration_cli.py  test_project_monitoring.py  test_project_store.py  test_project_web.py  test_public_web.py  test_report_profiles.py  test_reports.py  (+19 more)
tools/: browser_audit.py
