[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "veridra"
version = "0.1.0"
description = "Automated website visibility, AI discoverability, trust, health and public security posture assessment"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["fastapi>=0.115,<1", "httpx>=0.27,<1", "pydantic>=2.8,<3", "uvicorn>=0.30,<1"]

[project.optional-dependencies]
dev = ["mypy>=1.11,<2", "pytest>=8,<9", "pytest-asyncio>=0.24,<1", "pytest-cov>=5,<7", "ruff>=0.6,<1"]

[project.scripts]
veridra-api = "veridra.app:main"
veridra-audit = "veridra.audit:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --strict-markers --cov=veridra --cov-report=term-missing"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["veridra"]

[tool.ruff.lint.per-file-ignores]
"src/veridra/app.py" = ["E501"]
"src/veridra/core.py" = ["E501"]
"src/veridra/audit.py" = ["E501"]
